<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white_2"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWeight"
                style="@style/CardViewTheme"
                android:layout_weight="1"
                android:theme="@style/CardViewTheme">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvWeight"
                        style="@style/TextSubtitlesTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:text="@string/subtitles_weight" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/npWeight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:theme="@style/numberPickerTheme" />
                        <TextView
                            style="@style/TextSubtitlesTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/text_kg"/>





                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cvAge"
                style="@style/CardViewTheme"
                android:layout_weight="1"
                android:theme="@style/CardViewTheme">


            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/TextSubtitlesTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:text="@string/subtitles_age"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/npAge"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:theme="@style/numberPickerTheme" />
                        <TextView
                            style="@style/TextSubtitlesTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/text_years"/>





                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                style="@style/CardViewTheme"
                android:layout_weight="1"
                android:theme="@style/CardViewTheme">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHeight"
                        style="@style/TextSubtitlesTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/subtitles_height"
                        android:layout_weight="0.8"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        android:rotation="-90">
                        <SeekBar
                            android:id="@+id/sbHeight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.6"
                            android:max="220"
                            android:progress="180"
                            android:min="50"

                            style="@style/SeekBarTheme"/>
                        <TextView
                            android:id="@+id/tvHeightSb"
                            style="@style/TextSubtitlesTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:rotation="90"
                            android:text="160 cm "
                            android:layout_weight="0.4"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvGender"
                style="@style/CardViewTheme"
                android:layout_weight="1"
                android:theme="@style/CardViewTheme">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvgGender"
                        style="@style/TextSubtitlesTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:text="@string/subtitles_gender"
                        />



                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_woman"
                                />
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_men"
                                />

                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center">
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/text_female"
                                style="@style/TextSubtitlesTheme"/>
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/text_male"
                                style="@style/TextSubtitlesTheme"
                                />
                        </RadioGroup>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ButtonTheme"
            />




</androidx.constraintlayout.widget.ConstraintLayout>